--- a/admin.html
+++ b/admin.html
@@ -68,7 +68,7 @@
         <br>
         <input class="form-control" id="myInput" type="text" placeholder="Buscar..">
         <br>
-        <table class="table table-hover" id="table">
+        <table class="table table-hover table-striped" id="table">
             <thead>
                 <tr>
                     <th scope="col">#</th>
