--- a/index.html
+++ b/index.html
@@ -15,14 +15,71 @@
     <div class="container-md" id="main">
         <div class="text-center">
             <br>
-            <img src="https://storage.mobilebuilder.net/users/images/b8419b86-af06-4603-8bcd-76235b7497b2.png" alt="" srcset="" width="300">
+            <img src="https://storage.mobilebuilder.net/users/images/b8419b86-af06-4603-8bcd-76235b7497b2.png" alt=""
+                srcset="" width="300">
             <br>
             <br>
-            <h5>Somos una empresa representante de Concept For Pharmacy Israel, con enfoque en Bio seguridad en sectores hospitalarios, agroalimentarios, pecuarios e industriales, que integra al mejor equipo de especialistas.</h2>
-            <br>
-            <a style="width: 200;" href="tel:5562744475" class="btn btn-outline-success btn-lg">55 62 74 44 75</a>
-            <br>
-            <br>
+            <h5>Somos una empresa representante de Concept For Pharmacy Israel, con enfoque en Bio seguridad en sectores
+                hospitalarios, agroalimentarios, pecuarios e industriales, que integra al mejor equipo de especialistas.
+                </h2>
+                <br>
+                <a style="width: 200;" href="tel:5562744475" class="btn btn-outline-success btn-lg">55 62 74 44 75</a>
+                <br>
+                <br>
+                <div class="container-fluid" id="container">
+                    <div class="row align-items-start" id="row">
+                        <div class="col" id="instagram">
+                            <a id="instagram" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                                <span class="image-box">
+                                    <img src="https://storage.mobilebuilder.net/users/images/79a41af5-b321-477d-9632-07213a5bf8ad.png"
+                                        width="48">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="col" id="facebook">
+                            <a class="facebook" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                                <span class="image-box">
+                                    <img src="https://storage.mobilebuilder.net/users/images/d040a543-e81e-47d0-84c7-e3b3e67e4127.png"
+                                        width="48">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="col" id="youtube">
+                            <a class="youtube" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                                <span class="image-box">
+                                    <img src="https://storage.mobilebuilder.net/users/images/53314946-ae0b-4c05-9cc1-910ebcc0373c.png"
+                                        width="48">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="col" id="linkedin">
+                            <a class="linkedin" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                                <span class="image-box">
+                                    <img src="https://storage.mobilebuilder.net/users/images/f7c2fac5-b51f-4aaf-9cbb-29991b791447.png"
+                                        width="48">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="col" id="whatsapp">
+                            <a class="whatsapp" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                                <span class="image-box">
+                                    <img src="https://storage.mobilebuilder.net/users/images/fa4f9aa3-e270-4012-9041-578fee273842.png"
+                                        width="48">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="col" id="share">
+                            <a class="share" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                                <span class="image-box">
+                                    <img src="https://storage.mobilebuilder.net/users/images/96f4936d-f280-4f55-8b98-292fbad2d27c.png"
+                                        width="48">
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
         </div>
     </div>
 
