--- a/index.html
+++ b/index.html
@@ -90,6 +90,61 @@
                 <br>
         </div>
     </div>
+    
+    <div class="container" style="width: 70%;">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/de3b1096-a949-4998-9c59-2c8f0670e0b6.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/9f5d908a-f1d9-447a-96ae-f201c40cfaa8.png" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/519279bf-5ab7-4767-a082-c04d80f02c19.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/228a5e01-0599-4bbc-8a5a-b92a68a7ed3d.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/65ffbc3a-9f3b-4438-afd7-5556f3dad802.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/fe1daf89-2c2d-4360-b8fb-01e0c08d0579.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/ee49acf3-7574-4cb0-830f-ff568ccaa5c4.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/fa62148a-6f48-473f-b864-63ba236ff9e7.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/17a06827-eceb-4c00-9bb3-087e7433a8fb.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/aface160-6136-476f-b43e-2e4094039809.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/459d28f3-fc0c-4472-a19f-73b998996a22.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/2b3dd328-6683-4a27-bed9-1c9c193e903a.png" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://storage.mobilebuilder.net/users/images/519ecaf5-f73f-4991-b7d3-ed81fda7c3e7.png" alt="Third slide">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <br>
+    </div>
 
     <script>
         container = document.getElementById("containerTel")
@@ -180,6 +235,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
+    
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
