--- a/registro.html
+++ b/registro.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css" id="theme-styles">
     <!-- Nunito Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
-    <title>Sign Up | Firebase Auth</title>
+    <title>Registro</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-light">
     <div class="container-fluid">
