[update] loading indicator

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     
     
-    <div class="container" style="width: 70%;">
+    <div class="container" style="width: 70%;" id="slideshow">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
