[fix] display favicon

--- a/registro.html
+++ b/registro.html
@@ -16,7 +16,7 @@
     <!-- Nunito Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
     <title>Registro</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-light">
     <div class="container-fluid">
