--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="container-fluid" id="container">
                     <div class="row align-items-start" id="row">
                         <div class="col" id="instagram">
-                            <a id="instagram" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                            <a id="instagram" href="" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/79a41af5-b321-477d-9632-07213a5bf8ad.png"
                                         width="48">
@@ -46,7 +46,7 @@
                             </a>
                         </div>
                         <div class="col" id="facebook">
-                            <a class="facebook" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                            <a class="facebook" href="" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/d040a543-e81e-47d0-84c7-e3b3e67e4127.png"
                                         width="48">
@@ -54,7 +54,7 @@
                             </a>
                         </div>
                         <div class="col" id="youtube">
-                            <a class="youtube" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                            <a class="youtube" href="" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/53314946-ae0b-4c05-9cc1-910ebcc0373c.png"
                                         width="48">
@@ -62,7 +62,7 @@
                             </a>
                         </div>
                         <div class="col" id="linkedin">
-                            <a class="linkedin" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                            <a class="linkedin" href="" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/f7c2fac5-b51f-4aaf-9cbb-29991b791447.png"
                                         width="48">
@@ -70,7 +70,7 @@
                             </a>
                         </div>
                         <div class="col" id="whatsapp">
-                            <a class="whatsapp" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                            <a class="whatsapp" href="" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/fa4f9aa3-e270-4012-9041-578fee273842.png"
                                         width="48">
@@ -78,7 +78,7 @@
                             </a>
                         </div>
                         <div class="col" id="share">
-                            <a class="share" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
+                            <a class="share" href="" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/96f4936d-f280-4f55-8b98-292fbad2d27c.png"
                                         width="48">
