--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="container-fluid" id="container">
                     <div class="row align-items-start" id="row">
                         <div class="col" id="instagram">
-                            <a id="instagram" href="" target="_blank">
+                            <a id="instagram" href="https://www.instagram.com/conceptforpharmacy/" target="_blank">
                                 <span class="image-box">
                                     <img src="https://storage.mobilebuilder.net/users/images/79a41af5-b321-477d-9632-07213a5bf8ad.png"
                                         width="48">
