--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                 <div class="spinner-border" id="loader" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
+                <div class="button-box col-lg-12">
+                    <a href="./catalogo.html" class="btn btn-outline-success btn-lg" role="button">Catalogo</a>
+                    <a href="./videos.html" class="btn btn-outline-success btn-lg" role="button">Videos Tutoriales</a>
+                </div>
         </div>
     </div>
 
