--- a/videos.html
+++ b/videos.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogo</title>
+    <title>Videos Tutoriales</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
-
 <body>
-    <div class="container-md" id="main-catalogo">
+    <div class="container-md" id="main-videos">
         <div class="text-center">
             <br>
             <a href="./index.html"><img src="https://storage.mobilebuilder.net/users/images/b8419b86-af06-4603-8bcd-76235b7497b2.png" alt="" srcset="" width="300"></a>
             <br>
             <br>
+            
             <div class="spinner-border" id="loader" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
@@ -46,5 +45,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
